test/assets/invalid/let/expect-char.hs
import Data.Char (isSpace)

a :: Bool
a = let b = "a" in isSpace b